🐛 fixed overflow-x on ipad

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,5 +7,5 @@
 @import "Footer";
 .App {
   background-color: $secondary-clr;
-  // height: 100vh;
+  overflow-x: hidden;
 }
