--- a/src/styles/_Project.scss
+++ b/src/styles/_Project.scss
@@ -1,7 +1,7 @@
 @import "common";
 .Projects {
   font-family: "Noto Sans", sans-serif;
-
+  // margin: 0 auto;
   h2 {
     color: $primary-clr;
     text-align: center;
@@ -18,7 +18,9 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 2rem;
-    margin: 2rem 1rem;
+    margin: 2rem 0.5rem;
+    // margin: 0.5rem;
+    // margin: 0 auto;
     @include breakpoint($phone) {
       margin: 2rem 2rem;
     }
